================= Unreleased ==================
; Feature ; Minor ; Documentation; #5517 
Added information on OPC to Users Guide.

; Feature; Minor; Compiler ; #5516
Index added to variables and equations in blocks in HTML diagnostics.

; Fixed ; Minor ; Compiler ; #5514
Fixed problem with temporary generation for for-loop ranges

================= Stable-2017-11-29 ==================
; Change ; Minor ; Compiler ; #5513
Changed code generation to use hard coded values in the z-vector for 
performance.

; Fixed ; Minor ; Compiler ; #5487
Fixed some issues with relational expressions in arrays in records

; Feature ; Major ; Compiler, Runtime ; #5501
Added a memory pool to be used for dynamic allocations during evaluation
of the equations (significant speedup in cases with lots of dynamic
allocations).

; Change ; Minor ; Runtime ; #5505
Added the compiler flags -msse2 -mfpmath=sse for runtime builds using GCC,
the same are used for our FMUs.

; Fixed ; Minor ; Compiler ; #5503
Disabled automatic addition of derivatives for variables with state select set
to prefer if index reduction is disabled.

================= Stable-2017-11-10 ==================
; Change ; Minor ; Compiler ; #5497
Added option for disabling external evaluation during variability propagation

================= Stable-2017-11-02 ==================
; Fixed ; Minor ; Compiler ; #5326
Fixed bug where certain combinations of Integer and enumeration parameters 
gave wrong values of those parameters reported from the FMU.

; Change ; Major ; Tests ; #5489
Divided the test tags stddist, windows and casadi into stddist_base,
stddist_full, windows_base, windows_full, casadi_base and casadi_full. 
The _base indicates tests that should run on both 32 and 64 bit platform 
whereas _full will only be run in one mode. Also the tests tagged with fmi
are now tagged as stddist_base/full. 

; Fixed ; Minor ; PyFMI ; #5494
Fixed problem with binary files that includes spaces in the variable names.
